<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_reports"
    app:startDestination="@+id/navigation_home_reports">

    <fragment
        android:id="@+id/navigation_home_reports"
        android:name="com.example.hotel.ui.home.HomeFragment"
        android:label="@string/damage_reports"
        tools:layout="@layout/activity_a1_3__damage_reports" />

    <fragment
        android:id="@+id/navigation_dashboard_reports"
        android:name="com.example.hotel.ui.dashboard.DashboardFragment"
        android:label="@string/Lost_and_Found"
        tools:layout="@layout/activity_a1_3_reports_bottom_navigation_lostfound_frag" />

    <fragment
        android:id="@+id/navigation_notifications_reports"
        android:name="com.example.hotel.ui.notifications.NotificationsFragment"
        android:label="@string/create_user_reception"
        tools:layout="@layout/fragment_notifications" />

</navigation>
