<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_username"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <!--<EditText
        android:id="@+id/acc_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:hint="@string/acc_type"
        android:inputType="text" />-->


    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_password"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:hint="Name" />

    <EditText
        android:id="@+id/surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:hint="@string/Surname" />

    <Spinner
        android:id="@+id/acc_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/create_user"
        android:layout_below="@id/surname"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="8dp"
        android:hint="@string/acc_type"
        android:inputType="text"
        />

</RelativeLayout>